# high-performance-collatz-analyzer

./: .gitignore  CMakeLists.txt  EXPLAINED.md  OddToOdd.h  README.md  ReverseTree.h  SECURITY.md  linkedin_post.txt  main.cpp  requirements.txt  scratch_outlier.py  scratch_transitions.py  scratch_v2_seq.py
.github/workflows/: ci.yml
config/: .env.example
data/: research_report.md
data/csv/: advanced_binary_mod_1024_limit_50000000.csv  advanced_binary_mod_64_limit_1000000.csv  binary_patterns_mod_1024_limit_50000000.csv  drift_spectrum_mod_1024_limit_1000000.csv  drift_spectrum_mod_1024_limit_50000000.csv  drift_spectrum_mod_2048_limit_50000000.csv  drift_spectrum_mod_4096_limit_50000000.csv  feature_importance_limit_1000000.csv  heatmap_64.dot  heatmap_peak_64.csv  heatmap_steps_64.csv  heatmap_v2_64.csv  odd_to_odd_10000000.csv  outliers_limit_1000000.csv  residue_evolution_64_1024_limit_10000000.csv  residue_evolution_64_4096_limit_10000000.csv  residue_mod_1024_limit_50000000.csv  residue_mod_256_limit_50000000.csv  residue_mod_64_limit_10000000.csv  residue_mod_64_limit_50000000.csv  reverse_tree_30.csv  reverse_tree_40.csv  reverse_tree_50.csv  reverse_tree_60.csv  reverse_tree_70.csv
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md
scripts/: build.bat  dashboard.py  test.bat  visualize.py
src/: main.cpp
src/collatz/: CollatzMap.h  CollatzMultiThread.h  CollatzResult.h  CollatzVector.h  OddToOdd.h  ReverseTree.h
src/research/: AdvancedBinaryAnalyzer.hpp  BinaryPatternAnalyzer.hpp  CollatzFeatureEngine.hpp  (+21 more)
tests/: test_collatz.cpp
